# Organizer

./: Dockerfile  pyproject.toml
BotAssistant/: setup.py
BotAssistant/BotAssistant/: __init__.py  address_book.py  bot.py  bot_assistant_launcher.py  db_connector.py
BotAssistant/BotAssistant/res/: text.txt
